--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,23 @@
         <javaVersion>1.8</javaVersion>
         <mySqlConnectorVersion>8.0.27</mySqlConnectorVersion>
         <myBatisVersion>3.5.7</myBatisVersion>
+        <testNgVersion>7.4.0</testNgVersion>
+        <mavenSurfirePluginVersion>3.0.0-M5</mavenSurfirePluginVersion>
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${mySqlConnectorVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testNgVersion}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -31,6 +41,7 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -40,6 +51,20 @@
                     <target>${javaVersion}</target>
                 </configuration>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${mavenSurfirePluginVersion}</version>
+                <configuration>
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testng-suites/database.xml</suiteXmlFile>
+                    </suiteXmlFiles>
+                    <parallel>classes</parallel>
+                    <threadCount>5</threadCount>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
