--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,21 @@
         <myBatisVersion>3.5.7</myBatisVersion>
         <testNgVersion>7.4.0</testNgVersion>
         <mavenSurfirePluginVersion>3.0.0-M5</mavenSurfirePluginVersion>
+        <log4jversion>2.17.0</log4jversion>
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4jversion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4jversion}</version>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
